--- a/config.yml
+++ b/config.yml
@@ -1,13 +1,21 @@
-# This is a simplified config where the rest of the settings are omitted and will be set by default.
-# See https://gate.minekube.com/guide/config/ for the full configuration options.
+# This is a simplified config where the rest of the
+# settings are omitted and will be set by default.
+# See config.yml for the full configuration options.
 config:
   bind: 0.0.0.0:25565
   onlineMode: true
   servers:
-    server1: localhost:25566
-    server2: localhost:25567
+    compass: 127.0.0.1:25566
+    camouflage: 127.0.0.1:25567
   try:
-    - server1
-    - server2
-  # Disabling it allows our global-chat plugin to cancel messages.
+    - compass
+    - camouflage
+  forwarding:
+    mode: velocity
+    velocitySecret: balle123
   forceKeyAuthentication: false
+  shutdownReason: |
+    §cYou're out of luck!
+    <green>asdf</green>
+  status:
+    favicon: assets/znopp.png
